hotfix(style): fix overflow text on user profile When text is too long on name and about field of user profile, it's now added ellipsis to contain the text in one single line

--- a/src/blocks/profile/__subtitle/profile__subtitle.css
+++ b/src/blocks/profile/__subtitle/profile__subtitle.css
@@ -4,4 +4,7 @@
   font-size: clamp(0.875rem, 3vw, 1.125rem);
   font-weight: 400;
   line-height: 22px;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
 }
