--- a/src/blocks/profile/__title/profile__title.css
+++ b/src/blocks/profile/__title/profile__title.css
@@ -3,4 +3,7 @@
   font-weight: 500;
   margin: 0;
   max-width: 23.3125rem;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
 }
